# gbooks-upload

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Justfile  Makefile  README.md  genny.py  greeter.proto  greeter_grpc.py  greeter_pb2.py  input.proto  input_pb2.py  pyproject.toml  release-please-config.json  test_upload.py  upload.py
.github/workflows/: generate-man.py  python-package.yml  python-publish.yml  release-please.yml  relock.py
__snapshots__/: test_upload.ambr
gbooks_upload/: __init__.py  endpoints.py  scotty.py
google_internal_apis/: CHANGELOG.md  genny.py  pyproject.toml
google_internal_apis/google_internal_apis/: __init__.py  cli.py
src/google_internal_apis/: CHANGELOG.md  Makefile  README.md  complex.json  endpoints.yaml  genny.py  pyproject.toml  test_case.yaml  test_protobuf.py
src/google_internal_apis/__snapshots__/: test_protobuf.ambr
src/google_internal_apis/google_internal_apis/: __init__.py  cli.py  dummy.proto  dummy_pb2.py  dummy_pb2.pyi  endpoints.py  ghunter.py  input.proto  input_pb2.py  input_pb2.pyi  json_format.py
src/google_internal_apis/google_internal_apis/ghunt/: __init__.py  cli.py  config.py  ghunt.py  globals.py
src/google_internal_apis/google_internal_apis/ghunt/apis/: accounts.py  calendar.py  clientauthconfig.py  digitalassetslinks.py  drive.py  fireconsolepa.py  geolocation.py  identitytoolkit.py  mobilesdk.py  peoplepa.py  playgames.py  playgateway.py  vision.py
src/google_internal_apis/google_internal_apis/ghunt/helpers/: auth.py  banner.py  calendar.py  drive.py  gcp.py  gmail.py  gmaps.py  ia.py  iam.py  knowledge.py  listener.py  playgames.py  playstore.py  utils.py
src/google_internal_apis/google_internal_apis/ghunt/modules/: drive.py  email.py  gaia.py  geolocate.py  login.py
src/google_internal_apis/google_internal_apis/ghunt/objects/: apis.py  base.py  encoders.py  session.py  utils.py
src/google_internal_apis/google_internal_apis/ghunt/parsers/: geolocate.py  people.py  playgames.py
src/google_internal_apis/google_internal_apis/ghunt/protos/playgatewaypa/: get_player_pb2.py  get_player_response_pb2.py  search_player_pb2.py  (+1 more)
upload/: __init__.py  const.py  endpoints.md  endpoints.py  endpoints.yaml  endpoints_rpc.py  ghunter.py  playbooks.py  scotty.py
