[tool.poetry]
name = "upload"
version = "0.1.0"
description = ""
authors = ["Elliana May <me@mause.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "*"
requests = "*"
google-api-python-client = "^2.99.0"
oauth2client = "^4.1.3"
python-dotenv = "^1.0.1"
rich-click = "^1.8.5"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
gbooks-upload = "upload:main"

[tool.ruff.lint]
select = ["I", "E", "W", "F", "C", "R"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
