[project]
name = "upload"
version = "0.1.0"
description = ""
authors = [
    {name = "Elliana May", email = "me@mause.me"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
readme = "README.md"
dependencies = [
    "tqdm",
    "requests",
    "google-api-python-client<3.0.0,>=2.99.0",
    "oauth2client<5.0.0,>=4.1.3",
    "rich-click<2.0.0,>=1.8.5",
    "platformdirs>=4.3.6",
    "ghunt>=2.2.0",
]

[dependency-groups]
dev = [
    "pdbpp<1.0.0,>=0.10.3",
    "pre-commit<4.0.0,>=3.4.0",
]

[project.scripts]
gbooks-upload = "upload:main"

[tool.ruff.lint]
select = ["I", "E", "W", "F", "C", "R"]

[tool.uv]
package = true
