[project]
name = "upload"
version = "0.1.0"
description = ""
authors = [
    {name = "Elliana May", email = "me@mause.me"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
readme = "README.md"
dependencies = [
    "tqdm",
    "requests",
    "google-api-python-client<3.0.0,>=2.99.0",
    "oauth2client<5.0.0,>=4.1.3",
    "rich-click<2.0.0,>=1.8.5",
    "platformdirs>=4.3.6",
    "ghunt>=2.2.0",
    "uvloop>=0.21.0",
]

[tool.setuptools.packages]
find = { include = ["upload"] }

[dependency-groups]
dev = [
    "jinja2>=3.1.5",
    "mypy>=1.14.1",
    "pdbpp<1.0.0,>=0.10.3",
    "pre-commit<4.0.0,>=3.4.0",
    "pudb>=2024.1.3",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
    "syrupy>=4.8.1",
    "types-httplib2>=0.22.0.20241221",
    "types-requests>=2.32.0.20241016",
]

[project.scripts]
gbooks-upload = "upload:main"

[tool.ruff.lint]
select = ["I", "E", "W", "F", "C", "R"]

[tool.uv]
package = true
